# bimap

./: Cargo.toml  README.md
src/: lib.rs  traits.rs
